* Fixed bug where deleting a user didn't delete their preferences
* Fixed bug with phplayers not displaying correctly if the body tag
of the template had any attributes
* Fixed bug where custom 404 message didn't show existing value
* Fixed bug with template/css associations not working properly on
Postgres
* Fixed bug with News content type where clicking on details would
link to the admin
* Swedish translation was incorrectly using se_SE instead of sv_SE
as it's locale name.
* Updated ADODB to 4.65
* XHTML header did not pass along proper encoding in the admin

Version 0.10.3 "Ebenezer" -- Wed Oct 03 2005
-----------------

* Fixed a security bug where pages were succeptable to cross
site vulnerability as per BugTraq
* More security fixes and other safeguards

Version 0.10.2 "Darkwood" -- Wed Sep 24 2005
-----------------

* Fix for image manager not checking for permissions before
allowing uploads

Version 0.10.1 "Willoughby" -- Wed Aug 31 2005
-----------------

* Fix for a possible php injection in admin/lang.php.  Thanks
to vxsfx for finding this.

Version 0.10 "Antigua" -- Tue Jul 05 2005
-----------------

* Added dropdown of encodings to add/edit template pages
* Added multiple content blocks
* Added recursive html blobs
* Added ability for modules to use templates, either file based
or db based through a few API calls
* Added support for module translations
* Added indexes to increase performance
* Added bookmarks and recent pages to the admin
* Added javascript tabs to content editing
* Added global locale option to config.php
* Added parameter to CreateLink to allow modules to force contents
to {content} tag, while still displaying the same content in their
{cms_module}.
* Changed admin interface and themes
* Changed installer to use regular Submit buttons...  now works in
Konqueror
* Fixed bug with image path generation in TinyMCE
* Fixed bug with text parameter in print plugin
* Fixed bug with inactive pages still being accessible by page id