@@ -139,4 +139,4 @@ INSERT INTO {DB_PREFIX}userprefs ( USER_ID, PREFERENCE, VALUE, TYPE ) VALUES ( 1
 INSERT INTO {DB_PREFIX}userprefs ( USER_ID, PREFERENCE, VALUE, TYPE ) VALUES ( 1, 'bookmarks', 'on', null );
 INSERT INTO {DB_PREFIX}userprefs ( USER_ID, PREFERENCE, VALUE, TYPE ) VALUES ( 1, 'recent', 'on', null );
 INSERT INTO {DB_PREFIX}users ( USER_ID, USERNAME, PASSWORD, ADMIN_ACCESS, FIRST_NAME, LAST_NAME, EMAIL, ACTIVE, CREATE_DATE, MODIFIED_DATE ) VALUES ( 1, 'admin', '21232f297a57a5a743894a0e4a801fc3', 1, null, null, 'admin', 1, '2005-10-25 05:53:49', '2005-10-25 05:53:49' );
-INSERT INTO {DB_PREFIX}version ( VERSION ) VALUES ( 12 );
+INSERT INTO {DB_PREFIX}version ( VERSION ) VALUES ( 13 );
