@@ -18,9 +18,9 @@
 #
 #$Id$
 
-$CMS_VERSION = "0.11-beta4";
+$CMS_VERSION = "0.11-beta5";
 $CMS_VERSION_NAME = "Trinidad";
-$CMS_SCHEMA_VERSION = "12";
+$CMS_SCHEMA_VERSION = "13";
 
 # vim:ts=4 sw=4 noet
 ?>
